@startuml

' hide the spot
' hide circle

' avoid problems with angled crows feet
' skinparam linetype ortho


package "Scuria" {
  entity "users" {
    + id INT [PK]
    ==
    # company_id: INT [FK(companies,id)]
    email: VARCHAR(255)
    encrypted_password: VARCHAR(255)
    reset_password_token: VARCHAR(255)
    reset_password_sent_at: datetime
    remember_created_at: datetime
    sign_in_count: INT
    current_sign_in_at: datetime
    last_sign_in_at: datetime
    current_sign_in_ip: VARCHAR(255)
    last_sign_in_ip: VARCHAR(255)
    failed_attempts: INT
    unlock_token: VARCHAR(255)
    locked_at: datetime
    deleted_at: datetime
    created_at: datetime
    updated_at: datetime
  }

  entity "admins" {
     + id INT [PK]
    ==
    email: VARCHAR(255)
    encrypted_password: VARCHAR(255)
    reset_password_token: VARCHAR(255)
    reset_password_sent_at: datetime
    remember_created_at: datetime
    sign_in_count: INT
    current_sign_in_at: datetime
    last_sign_in_at: datetime
    current_sign_in_ip: VARCHAR(255)
    last_sign_in_ip: VARCHAR(255)
    failed_attempts: INT
    unlock_token: VARCHAR(255)
    locked_at: datetime
    deleted_at: datetime
    created_at: datetime
    updated_at: datetime
  }

  entity "companies" {
    + id: INT [PK]
    ==
    email: VARCHAR(255)
    name: VARCHAR(255)
    deleted_at: datetime
    created_at: datetime
    updated_at: datetime
  }

  entity "backlog_roles" {
    + id: INT [PK]
    ==
    # backlog_id: INT [FK(backlogs,id)]
    roll_name: VARCHAR(255)
    created_at: datetime
    updated_at: datetime
  }


  entity "backlogs" {
    + id: INT [PK]
    ==
    # company_id: INT [FK(companies,id)]
    # parent_id: INT [FK(backlogs,id)] 
    name: VARCHAR(255)
    created_at: datetime
    updated_at: datetime 
  }

  entity "backlog_columns" {
    +id: INT
    ==
    # backlog_id: INT [FK(backlogs,id)]
    name: VARCHAR(255)
    update_at: datetime
    created_at: datetime
  }


  entity "backlog_items" {
    +id: INT
    ==
    name: VARCHAR(255)
    # assigned_user_id: INT [FK(users,id)]
    # backlog_column_id: INT [FK(backlog_columns,id)]
    # backlog_tag_id: [FK(backlog_items_to_backlog_tags, back_log_tag_id)]
    point: INT
    order: INT
    completed_at: datetime
    update_at: datetime
    created_at: datetime
  }

  entity "backlog_item_to_backlog_tags" {
    +id: INT
    ==
    backlog_id: INT [FK(backlog_items,id)]
    users: INT [FK(backlog_tags,id)]
    update_at: datetime
    created_at: datetime
  }


  entity "backlog_members" {
    +id: INT
    ==
    # backlog_id: INT [FK(backlog_items,id)]
    # backlog_rolle_id: INT [FK(backlogs,id)]
    # user_id: INT[FK(users,id)]
    update_at: datetime
    created_at: datetime
  }

  entity "backlog_tags" {
    +id: INT
    ==
    name: VARCHAR(255)
    # backlog_item_id: INT [FK(backlog_item_to_backlog_tags, back_log_item_id)]
    update_at: datetime
    created_at: datetime
  }

  entity "user_to_backlog_items" {
    +id: INT
    ==
    # user_id: INT [FK(users,id)]
    # backlog_item_id: INT [FK(backlog_items,id)]
    update_at: datetime
    created_at: datetime
  }


  users }o-- companies
  backlog_roles ||-- backlogs
  backlogs |o-- backlogs

  backlog_columns ||-- backlogs
  backlog_columns ||--o{ backlog_items
  backlog_items ||--o{ backlog_item_to_backlog_tags
  backlog_item_to_backlog_tags }o--||backlog_tags
  backlogs ||--|{ backlog_members
  backlog_members}|--||users

  backlog_roles --o{ backlog_members
  users ||--o{ user_to_backlog_items
  user_to_backlog_items }o--|| backlog_items

}


@enduml
